--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crc-scripts",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "index.js",
   "license": "MIT",
   "files": [
@@ -12,7 +12,7 @@
   "bin": {
     "crc-scripts": "./bin/crc-scripts.js"
   },
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-decorators": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
@@ -23,6 +23,7 @@
     "antd": "^4.16.13",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
+    "cross-spawn": "^7.0.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
@@ -47,8 +48,5 @@
     "webpack": "^5.64.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
-  },
-  "dependencies": {
-    "cross-spawn": "^7.0.3"
   }
 }
