--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "crc-scripts",
-  "version": "1.0.2",
+  "version": "1.0.5-beta.31",
   "main": "index.js",
   "license": "MIT",
   "files": [
     "bin",
     "config",
     "lib",
-    "scripts"
+    "scripts",
+    "babel.config.json",
+    ".eslintrc.json"
   ],
   "bin": {
     "crc-scripts": "./bin/crc-scripts.js"
@@ -18,6 +20,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "antd": "^4.16.13",
