--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crc-scripts",
-  "version": "1.0.5-beta.32",
+  "version": "1.0.5-beta.59",
   "main": "index.js",
   "license": "MIT",
   "files": [
@@ -8,8 +8,8 @@
     "config",
     "lib",
     "scripts",
-    "babel.config.json",
-    ".eslintrc.json"
+    "template",
+    "babel.config.json"
   ],
   "bin": {
     "crc-scripts": "./bin/crc-scripts.js"
@@ -23,9 +23,9 @@
     "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "antd": "^4.16.13",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
+    "core-js": "^3.19.3",
     "cross-spawn": "^7.0.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.2.0",
@@ -37,6 +37,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
@@ -49,7 +50,6 @@
     "typescript": "^4.5.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.64.1",
-    "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
   }
 }
