--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crc-scripts",
-  "version": "1.0.5-beta.88",
+  "version": "1.0.8",
   "main": "index.js",
   "license": "MIT",
   "files": [
